# accept-clang

./: CMakeLists.txt
enerc/: README
enerc/EnerCTypeChecker/: CMakeLists.txt  EnerCTypeChecker.cpp  Makefile  NodeTyper.h  TyperConsumer.cpp  TyperVisitor.h
include/clang/AST/: ASTContext.h  GlobalDecl.h  Type.h
include/clang/Basic/: Attr.td
include/clang/Sema/: SemaInternal.h
lib/AST/: ASTContext.cpp  Type.cpp  TypePrinter.cpp
lib/CodeGen/: CGCall.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGExpr.cpp  CGExprScalar.cpp  CGStmt.cpp  CodeGenFunction.h  CodeGenModule.cpp
lib/Frontend/: FrontendAction.cpp
lib/Sema/: SemaDecl.cpp  SemaDeclAttr.cpp  SemaOverload.cpp
